<resources>
    <string name="app_name">NanopoolStatService</string>

    <string name="init_notify_title">Loading stats</string>
    <string name="init_notify_content">Sending request…</string>

    <string name="init_notify_fail_title">Refreshing…</string>
    <string name="init_notify_fail_text">No connection with server.</string>

    <string name="notify_btn_stop">Stop</string>
    <string name="notify_btn_refresh">Refresh</string>

    <string name="synced">Synced</string>
    <string name="syncing">Syncing</string>

</resources>
